<resources>
    <string name="app_name">AluCar</string>
    <string name="veiculos_disponiveis">Veículos Disponíveis</string>
    <string name="clientes">Clientes</string>
    <string name="locacoes">Locações</string>
    <string name="lista_de_veiculos_disponiveis">Lista de veículos disponíveis</string>
    <string name="lista_de_clientes">Lista de clientes</string>
    <string name="todo">TODO</string>
    <string name="cadastro_de_veiculos">Cadastro de Veículos</string>
    <string name="marca">Marca :</string>
    <string name="modelo">Modelo :</string>
    <string name="cor">Cor :</string>
    <string name="ano">Ano :</string>
    <string name="placa">Placa :</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="cadastrar_veic">Cadastrar</string>
    <string name="pesquisar_veic">Pesquisar</string>
    <string name="cadastro_clientes">Cadastro de Clientes</string>
    <string name="cadastrar_cliente">Cadastrar</string>
    <string name="pesquisar_Cliente_nome">Pesquisar por nome</string>
    <string name="pesquisar_Cliente_cpf">Pesquisar por CPF</string>
    <string name="nome">Nome :</string>
    <string name="cpf">CPF :</string>
    <string name="telefone">Telefone :</string>
    <string name="btn_salvar">Salvar</string>
    <string name="atualizar_cliente">Atualizar</string>
    <string name="excluir_cliente">Excluir</string>
    <string name="atualizar_veiculo">Atualizar</string>
    <string name="excluir_veiculo">Excluir</string>

    <string name="devolucao">Devolvoluçao</string>
    <string name="editar_locacao">Editar</string>
    <string name="excluir_locacao">Excluir</string>
    <string name="cadastrar_aluguel">Cadastrar</string>
    <string name="pesquisar_aluguel">Pesquisar</string>
    <string name="cadastrar_locacao">Cadastrar Locação</string>
    <string name="btn_adicionar_veiculo">Adicionar Veiculo</string>
    <string name="corA">Cor</string>
    <string name="marcaA">Marca</string>
    <string name="modeloA">Modelo</string>
    <string name="nomeA">Nome</string>
    <string name="anoA">Ano</string>
    <string name="btn_alugar">Alugar</string>
    <string name="placaA">Placa</string>
    <string name="cpfA">CPF</string>
    <string name="btn_adicionar_clienteA">Adicionar Cliente</string>
    <string name="telefoneA">Telefone</string>
    <string name="dados_da_locacao">Dados da Locação</string>
    <string name="data_de_aluguel">Data de aluguel :</string>
    <string name="data_de_entrega">Data de entrega :</string>
    <string name="qtd_de_dias">Qtd. de dias :</string>
    <string name="valor_a_pagar">Valor a pagar :</string>
    <string name="dados_do_aluguel">Dados do aluguel</string>
    <string name="btn_buscar_veiculo">Buscar Veiculo</string>
    <string name="btn_buscar_cliente">Buscar cliente</string>
    <string name="btn_salvar_locacao">Salvar Locação</string>
    <string name="enviar_veiculo">Enviar para locação</string>
    <string name="enviar_cliente">Enviar para locação</string>

</resources>