<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:onClick="cadastrarCliente"
        android:title="@string/cadastrar_cliente"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/app_bar_search_cliente_nome"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/pesquisar_Cliente_nome"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/app_bar_search_cliente_cpf"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/pesquisar_Cliente_cpf"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView" />
</menu>