<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.AluCar.activity.cadastrar_veiculo">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cadastro_de_veiculos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marca" />

            <EditText
                android:id="@+id/editMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modelo" />

            <EditText
                android:id="@+id/editModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvCor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cor" />

            <EditText
                android:id="@+id/editCor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ano" />

            <EditText
                android:id="@+id/editAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tvPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placa" />

            <EditText
                android:id="@+id/editPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <Button
                android:id="@+id/btSalvarVeic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="salvarVeic"
                android:text="@string/salvar" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>